<?xml version="1.0" encoding="UTF-8"?>
<!-- NB: This pom file has two build profiles: 'prod' and 'test'
     they are set in the <build> section towards the end of this file
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.auscope.portal</groupId>
    <artifactId>auscope-portal-api</artifactId>
    <packaging>war</packaging>
    <version>6.9.2-SNAPSHOT</version>
    <name>AuScope-Portal-API</name>
    <description>AuScope's flagship portal</description>
    <url>https://portal.auscope.org.au</url>
    <issueManagement>
        <system>Jira</system>
        <url>https://jira.csiro.au/browse/AUS</url>
    </issueManagement>
    <scm>
        <connection>scm:git:https://github.com/AuScope/AuScope-Portal-API</connection>
        <developerConnection>scm:git:https://github.com/AuScope/AuScope-Portal-API</developerConnection>
        <url>https://github.com/AuScope/AuScope-Portal-API</url>
    </scm>
    
    <organization>
        <name>AuScope</name>
        <url>http://www.auscope.org</url>
    </organization>
    
    <!-- Project properties -->
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <powermock.version>2.0.5</powermock.version>
        <log4j.version>2.17.1</log4j.version>
        <geotools.version>2.6.5</geotools.version>
        <portal.core.version>2.9.2-SNAPSHOT</portal.core.version>
        <httpclient.version>4.5.13</httpclient.version>
        <mysql.version>8.0.14</mysql.version>
    </properties>
    
    <!--  Spring Boot -->    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
    </parent>
    
    <!-- Repositories section -->
    <repositories>
        <repository>
            <id>apache-snapshots</id>
            <name>snapshots  apache maven repo</name>
            <url>https://repository.apache.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
             <id>unicar</id>
             <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases/</url>
        </repository>
		<repository>
            <id>central-snapshots</id>
            <name>Maven Central - SNAPSHOTS</name>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <!-- Dependencies section -->
    <dependencies>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- JPA (Spring Boot) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        
        <!-- Security (Spring Boot) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
           <groupId>org.springframework.security</groupId>
           <artifactId>spring-security-oauth2-jose</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
	        <version>6.2.10</version>
        </dependency>
        <dependency>
            <groupId>io.github.auscope</groupId>
            <artifactId>portal-core</artifactId>
            <version>${portal.core.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.github.auscope</groupId>
            <artifactId>portal-core</artifactId>
            <version>${portal.core.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

	    <!-- This is a dummy database used for development only -->
	    <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.1</version>
	    </dependency>
        
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.11.1</version>
        </dependency>
        
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        
        <!-- Added for job monitoring -->
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.4.0</version>
        </dependency>
        
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
            <version>42.6.1</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>apache-jena-libs</artifactId>
            <version>5.5.0</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
            <version>2.12.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.ow2.asm</groupId>
                    <artifactId>asm</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.jmock</groupId>
                    <artifactId>jmock-legacy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-imposters</artifactId>
            <version>2.12.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-core</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-legacy</artifactId>
            <version>2.6.3</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-core</artifactId>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>

        <dependency>
            <groupId>com.azure.spring</groupId>
            <artifactId>spring-cloud-azure-appconfiguration-config</artifactId>
            <version>5.23.0</version>
        </dependency>
    </dependencies>

    <!-- Build section -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
		        <image>
                    <env>
                        <BP_JVM_VERSION>21.*</BP_JVM_VERSION>
                    </env>
                    <bindings>
                        <binding>${basedir}/bindings/ca-certificates:/platform/bindings/ca-certificates</binding>
                    </bindings>
                </image>
                    <jvmArguments>
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED
                    --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
                    </jvmArguments>
		</configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>5.0.0</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    <includeOnlyProperties>
                        <includeOnlyProperty>^git.commit.id.full$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.message.(short|full)$</includeOnlyProperty>
                        <includeOnlyProperty>^git.branch$</includeOnlyProperty>
                    </includeOnlyProperties>
                    <commitIdGenerationMode>full</commitIdGenerationMode>
                </configuration>
            </plugin>
		
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>				
                        <id>default-prepare-agent</id>
						<goals>	
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <executions>
                <execution>
                    <id>sign-artifacts</id>
                    <phase>verify</phase>
                    <goals>
                    <goal>sign</goal>
                    </goals>
                </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- Deployment to github packages -->
    <distributionManagement>
      <repository>
        <id>github</id>
        <name>GitHub Packages</name>
	<url>https://maven.pkg.github.com/AuScope/Auscope-Portal-API</url>
      </repository>
    </distributionManagement>
    
</project>
